[metadata]
name = glue-genomics-viewers
url = https://www.gluesolutions.io
author = glue solutions inc.
author_email = jfoster@gluesolutions.io
classifiers = 
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering :: Visualization
	License :: OSI Approved :: BSD License
description = Custom viewers for genomics data in glue
long_description = file: README.md


[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires = 
	glue_core>=1.0.0

[options.entry_points]
glue.plugins=
	heatmap = glue_genomics_viewers:setup

[flake8]
max-line-length = 99